# qrgen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/qrgen/: __main__.py  app.py  cli.py  qr.py  renderer.py
